--- a/Assignment 1/Assignment 1_2.ipynb
+++ b/Assignment 1/Assignment 1_2.ipynb
@@ -1,13 +1,48 @@
 {
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The sum is: 80\n"
+          ]
+        }
+      ],
+      "source": [
+        "#2.1\n",
+        "x = 24\n",
+        "y = 30\n",
+        "z = 26\n",
+        "result = x + y + z\n",
+        "print(\"The sum is:\", result)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "source": []
+    }
+  ],
   "metadata": {
     "kernelspec": {
-      "name": "python",
-      "display_name": "Python (Pyodide)",
-      "language": "python"
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
-        "name": "python",
+        "name": "ipython",
         "version": 3
       },
       "file_extension": ".py",
@@ -15,35 +50,9 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.13.1"
     }
   },
-  "nbformat_minor": 4,
   "nbformat": 4,
-  "cells": [
-    {
-      "cell_type": "code",
-      "source": "#2.1\nx = 24\ny = 30\nz = 26\nresult = x + y + z\nprint(\"The sum is:\", result)",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "text": "The sum is: 80\n",
-          "output_type": "stream"
-        }
-      ],
-      "execution_count": 1
-    },
-    {
-      "cell_type": "code",
-      "source": "",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": null
-    }
-  ]
+  "nbformat_minor": 4
 }
