--- a/Assignment 1/Assignment 1_5.ipynb
+++ b/Assignment 1/Assignment 1_5.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 5.1: WAP to find max amoung three numbers and input from user. [Try max() function]"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -22,6 +29,13 @@
         "num3 = int(input(\"Enter the third number: \"))\n",
         "maximum = max(num1, num2, num3)\n",
         "print(\"The maximum among\", num1, \",\", num2, \"and\", num3, \"is: \", maximum)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 5.2: WAP to add all numbers divisible by 7 and 9 from 1 to n and n is given by the user."
       ]
     },
     {
@@ -47,6 +61,13 @@
         "    if num % 7 == 0 and num % 9 == 0:\n",
         "        totalSum += num\n",
         "print(\"The sum of numbers divisible by 7 and 9 from 1 to n is: \", totalSum)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 5.3: WAP to add all prime numbers from 1 to n and n is given by the user."
       ]
     },
     {
