--- a/Assignment 1/Assignment 1_6.ipynb
+++ b/Assignment 1/Assignment 1_6.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 6.1: WAP using function that add all odd numbers from 1 to n, n is given by the user."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -25,6 +32,14 @@
         "n = int(input(\"Enter a number n: \"))\n",
         "result = sum_of_odds(n)\n",
         "print(\"The sum of all odd numbers from 1 to\", n, \"is: \", result)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "Assignment 6.2: WAP using function that add all prime numbers from 1 to n, n given by the user."
       ]
     },
     {
