--- a/Assignment 1/Assignment1.ipynb
+++ b/Assignment 1/Assignment1.ipynb
@@ -1,9 +1,54 @@
 {
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "bcb8d1bc",
+      "metadata": {},
+      "source": [
+        "Assignment 1.1: WAP to print your name three times"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "db4e4e0a-acaa-4242-be29-2cf5f889107f",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Divjot Singh Gulati\n",
+            "Divjot Singh Gulati\n",
+            "Divjot Singh Gulati\n"
+          ]
+        }
+      ],
+      "source": [
+        "#1.1\n",
+        "print(\"Divjot Singh Gulati\")\n",
+        "print(\"Divjot Singh Gulati\")\n",
+        "print(\"Divjot Singh Gulati\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cef62e91-04b6-4783-938f-a63ff543f71f",
+      "metadata": {
+        "trusted": true
+      },
+      "outputs": [],
+      "source": []
+    }
+  ],
   "metadata": {
     "kernelspec": {
-      "name": "python",
       "display_name": "Python (Pyodide)",
-      "language": "python"
+      "language": "python",
+      "name": "python"
     },
     "language_info": {
       "codemirror_mode": {
@@ -18,34 +63,6 @@
       "version": "3.8"
     }
   },
-  "nbformat_minor": 5,
   "nbformat": 4,
-  "cells": [
-    {
-      "id": "db4e4e0a-acaa-4242-be29-2cf5f889107f",
-      "cell_type": "code",
-      "source": "#1.1\nprint(\"Divjot Singh Gulati\")\nprint(\"Divjot Singh Gulati\")\nprint(\"Divjot Singh Gulati\")",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "text": "Divjot Singh Gulati\nDivjot Singh Gulati\nDivjot Singh Gulati\n",
-          "output_type": "stream"
-        }
-      ],
-      "execution_count": 2
-    },
-    {
-      "id": "cef62e91-04b6-4783-938f-a63ff543f71f",
-      "cell_type": "code",
-      "source": "",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": null
-    }
-  ]
+  "nbformat_minor": 5
 }
