--- a/Assignment 1/Assignment 1_2.ipynb
+++ b/Assignment 1/Assignment 1_2.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 2.1: WAP to add three numbers and print the result."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -25,13 +32,34 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 2.2: WAP to concatinate three strings and print the result."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "HelloWorld!\n"
+          ]
+        }
+      ],
+      "source": [
+        "s1= \"Hello\"\n",
+        "s2= \"World\"\n",
+        "s3= \"!\"\n",
+        "result= s1 + s2 + s3\n",
+        "print(result)"
+      ]
     }
   ],
   "metadata": {
@@ -50,7 +78,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.1"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
