--- a/Assignment 1/Assignment 1_4.ipynb
+++ b/Assignment 1/Assignment 1_4.ipynb
@@ -1,6 +1,13 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 4.1: WAP to print the table of 7, 9."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -51,6 +58,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 4.2: WAP to print the table of n and n is given by user."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -81,6 +95,13 @@
         "print(\"Table of n:\")\n",
         "for i in range(1, 11):\n",
         "    print(n, \"x\", i, \"=\", n * i)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Assignment 4.3: WAP to add all the numbers from 1 to n and n is given by user."
       ]
     },
     {
